support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_missing_semi.i
%module xxx
int foo(int)
int bar(int,int);

