support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_missing_semi.stderr
c_missing_semi.i:3: Error: Syntax error - possibly a missing semicolon.
